--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 			<div class="hs-item set-bg" data-setbg="img/slider-1.jpg">
 				<div class="hs-text">
 					<div class="container">
-						<h2>The Best <span>Games</span> Out There</h2>
+						<h2>최고의<span>Games</span> Out There</h2>
 						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec malesuada <br> lorem maximus mauris scelerisque, at rutrum nulla dictum. Ut ac ligula sapien. <br>Suspendisse cursus faucibus finibus.</p>
 						<a href="#" class="site-btn">Read More</a>
 					</div>
@@ -76,7 +76,7 @@
 			<div class="hs-item set-bg" data-setbg="img/slider-2.jpg">
 				<div class="hs-text">
 					<div class="container">
-						<h2>The Best <span>Games</span> Out There</h2>
+						<h2>최고의<span>Games</span> Out There</h2>
 						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec malesuada <br> lorem maximus mauris scelerisque, at rutrum nulla dictum. Ut ac ligula sapien. <br>Suspendisse cursus faucibus finibus.</p>
 						<a href="#" class="site-btn">Read More</a>
 					</div>
