--- a/index.html
+++ b/index.html
@@ -68,8 +68,7 @@
 				<div class="hs-text">
 					<div class="container">
 						<h2>최고의<span>영재 학생</span> </h2>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec malesuada <br> lorem maximus mauris scelerisque, at rutrum nulla dictum. Ut ac ligula sapien. <br>Suspendisse cursus faucibus finibus.</p>
-						<a href="#" class="site-btn">Read More</a>
+						<p>역사에 기록 될 정도로<br> 대단한 영재 학생들 <br>지금 바로 확인하시죠</p>
 					</div>
 				</div>
 			</div>
@@ -77,7 +76,7 @@
 				<div class="hs-text">
 					<div class="container">
 						<h2>최고의<span>영재 학생</span></h2>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec malesuada <br> lorem maximus mauris scelerisque, at rutrum nulla dictum. Ut ac ligula sapien. <br>Suspendisse cursus faucibus finibus.</p>
+						<p>역사에 기록 될 정도로<br> 대단한 영재 학생들 <br>지금 바로 확인하시죠</p>
 						<a href="#" class="site-btn">Read More</a>
 					</div>
 				</div>
