--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
 			<!-- site menu -->
 			<nav class="main-menu">
 				<ul>
-					<li><a href="index.html">Home</a></li>
-					<li><a href="review.html">Games</a></li>
-					<li><a href="categories.html">Blog</a></li>
-					<li><a href="community.html">Forums</a></li>
-					<li><a href="contact.html">Contact</a></li>
+					<li><a href="index.html">집</a></li>
+					<li><a href="review.html">학생 목록</a></li>
+					<li><a href="categories.html">블로그</a></li>
+					<li><a href="community.html">포머스</a></li>
+					<li><a href="contact.html">연결</a></li>
 				</ul>
 			</nav>
 		</div>
