--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 					<div class="container">
 						<h2>최고의<span>영재 학생</span></h2>
 						<p>역사에 기록 될 정도로<br> 대단한 영재 학생들 <br>지금 바로 확인하시죠</p>
-						<a href="#" class="site-btn">Read More</a>
+						<a href="#" class="site-btn">확인</a>
 					</div>
 				</div>
 			</div>
