--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 				<img src="img/logo.png" alt="">
 			</a>
 			<div class="user-panel">
-				<a href="#">Login</a>  /  <a href="#">Register</a>
+				<a href="#">로그인</a>  /  <a href="#">가입</a>
 			</div>
 			<!-- responsive -->
 			<div class="nav-switch">
