--- a/index.html
+++ b/index.html
@@ -88,12 +88,12 @@
 
 	<!-- Latest news section -->
 	<div class="latest-news-section">
-		<div class="ln-title">Latest News</div>
+		<div class="ln-title">경사로운 뉴스들</div>
 		<div class="news-ticker">
 			<div class="news-ticker-contant">
-				<div class="nt-item"><span class="new">new</span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </div>
-				<div class="nt-item"><span class="strategy">strategy</span>Isum dolor sit amet, consectetur adipiscing elit. </div>
-				<div class="nt-item"><span class="racing">racing</span>Isum dolor sit amet, consectetur adipiscing elit. </div>
+				<div class="nt-item"><span class="new">new</span>코로나 종식 선언 </div>
+				<div class="nt-item"><span class="strategy">strategy</span>영재 개 어려움  </div>
+				<div class="nt-item"><span class="racing">racing</span>ㄹㅇ ㅋㅋ 어려움 </div>
 			</div>
 		</div>
 	</div>
