--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
 		<div class="ln-title">경사로운 뉴스들</div>
 		<div class="news-ticker">
 			<div class="news-ticker-contant">
-				<div class="nt-item"><span class="new">new</span>코로나 종식 선언 </div>
-				<div class="nt-item"><span class="strategy">strategy</span>영재 개 어려움  </div>
-				<div class="nt-item"><span class="racing">racing</span>ㄹㅇ ㅋㅋ 어려움 </div>
+				<div class="nt-item"><span class="new">새 뉴스</span>코로나 종식 선언 </div>
+				<div class="nt-item"><span class="strategy">댓글들</span>영재 개 어려움  </div>
+				<div class="nt-item"><span class="racing">그 밑에 댓글들</span>ㄹㅇ ㅋㅋ 어려움 </div>
 			</div>
 		</div>
 	</div>
@@ -106,41 +106,41 @@
 			<div class="row">
 				<div class="col-lg-3 col-md-6 p-0">
 					<div class="feature-item set-bg" data-setbg="img/features/1.jpg">
-						<span class="cata new">new</span>
+						<span class="cata new">뉴</span>
 						<div class="fi-content text-white">
-							<h5><a href="#">Suspendisse ut justo tem por, rutrum</a></h5>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
-							<a href="#" class="fi-comment">3 Comments</a>
+							<h5><a href="#">1</a></h5>
+							<p>2345678 </p>
+							<a href="#" class="fi-comment">9개의 댓글들</a>
 						</div>
 					</div>
 				</div>
 				<div class="col-lg-3 col-md-6 p-0">
 					<div class="feature-item set-bg" data-setbg="img/features/2.jpg">
-						<span class="cata strategy">strategy</span>
+						<span class="cata strategy">스트뤠잇</span>
 						<div class="fi-content text-white">
-							<h5><a href="#">Justo tempor, rutrum erat id, molestie</a></h5>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
-							<a href="#" class="fi-comment">3 Comments</a>
+							<h5><a href="#">a</a></h5>
+							<p>bcdefghijklmnopqrstuvwxy </p>
+							<a href="#" class="fi-comment">z개의 댓글들</a>
 						</div>
 					</div>
 				</div>
 				<div class="col-lg-3 col-md-6 p-0">
 					<div class="feature-item set-bg" data-setbg="img/features/3.jpg">
-						<span class="cata new">new</span>
+						<span class="cata new">뉴</span>
 						<div class="fi-content text-white">
-							<h5><a href="#">Nullam lacinia ex eleifend orci porttitor</a></h5>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
-							<a href="#" class="fi-comment">3 Comments</a>
+							<h5><a href="#">3</a></h5>
+							<p>.141592653589793238462643383279502884197169 </p>
+							<a href="#" class="fi-comment">원 주율</a>
 						</div>
 					</div>
 				</div>
 				<div class="col-lg-3 col-md-6 p-0">
 					<div class="feature-item set-bg" data-setbg="img/features/4.jpg">
-						<span class="cata racing">racing</span>
+						<span class="cata racing">레싱</span>
 						<div class="fi-content text-white">
-							<h5><a href="#">Lacinia ex eleifend orci suscipit</a></h5>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
-							<a href="#" class="fi-comment">3 Comments</a>
+							<h5><a href="#">제목</a></h5>
+							<p>소제목 </p>
+							<a href="#" class="fi-comment">의견들</a>
 						</div>
 					</div>
 				</div>
@@ -154,8 +154,8 @@
 	<section class="recent-game-section spad set-bg" data-setbg="img/recent-game-bg.png">
 		<div class="container">
 			<div class="section-title">
-				<div class="cata new">new</div>
-				<h2>Recent Games</h2>
+				<div class="cata new">JTBC</div>
+				<h2>대표적!</h2>
 			</div>
 			<div class="row">
 				<div class="col-lg-4 col-md-6">
